--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Webpage Test</title>
 </head>
 <body>
-    
+    <p>
+        This is a paragraph.<br /><br />Here is a list.
+    </p>
+    <!-- top three numbers -->
+    <ol>
+        <li>One</li>
+        <li>Two</li>
+        <li>Three</li>
+    </ol>
+    <p>
+        <a href="https://www.wikipedia.org/" target="_blank">This is a link.</a>
+        <!-- Here's a comment. Just for fun. ^wiki -->
+    </p>
 </body>
 </html>
