--- a/lyrics.html
+++ b/lyrics.html
@@ -1,237 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <h1><a href="https://en.wikipedia.org/wiki/Passion_(musical)">Passion</a> Lyrics</h1>
-    <h2><em>Written and Composed by Stephen Sondheim</em></h2>
-    <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTxJASgl_1GkBmAPSxwehqHgJSNYRyykcxkkKARoLTyTBtJIcrPJtlRylnbmfFFzxynXJRJBi3a8gzgmwE0OkmyEKa7ZQW7M568x0DFpiuX" alt="sondheim">
-    <p>
-        <ul>
-        <li><strong>[CLARA]</strong></li>
-        I'm so happy<br />I'm afraid I'll die<br />Here in your arms<br />What would you do<br />If I died<br />Like this<br />Right now<br />Here in your arms?
-    </p>
-    <p>
-        That we ever should have met<br />Is a miracle
-    </p>
-    <p>
-        <li><strong>[GIORGIO]</strong></li>
-        No, inevitable—
-    </p>
-    <p>
-        <li><strong>[CLARA]</strong></li>
-        Then inevitable, yes<br />But I confess<br />It was the look—
-    </p>
-    <p>
-        <li><strong>[GIORGIO]</strong></li>
-        The look?
-    </p>
-    <p>
-        <li><strong>[CLARA]</strong></li>
-        The sadness in your eyes<br />That day<br />When we glanced<br />At each other in the park
-<!-- See pop shows near Pleasanton
-Get tickets as low as $72
-
-You might also like
-First Letter
-Original Broadway Cast of Passion
-And Eve Was Weak
-Carrie: The Musical Ensemble
-Manchild
-Sabrina Carpenter -->
-    <!-- <p>
-    [GIORGIO]
-We were both unhappy
-
-[CLARA]
-Unhappiness can be seductive
-
-[GIORGIO]
-You pitied me
-
-[BOTH]
-How quickly pity leads to love
-
-[CLARA]
-All this happiness
-Merely from a glance in the park
-So much happiness
-So much love
-
-[GIORGIO]
-I thought I knew what love was
-
-[CLARA]
-I wish we might have met so much sooner
-I could have given you—
-
-[GIORGIO]
-I thought I knew what love was
-
-
-[CLARA]
-—My youth
-
-[GIORGIO]
-I thought I knew how much I could feel
-
-[CLARA]
-All the time we lost...
-
-[GIORGIO]
-I didn't know what love was
-
-[CLARA]
-I've never known what love was
-[GIORGIO]
-But now—	[CLARA]
-And now—
-[BOTH]
-— I do
-It's what I feel with you
-The happiness I feel with you
-
-[CLARA]
-So much happiness
-
-Happening by chance in a park
-
-Surely, this is happiness
-
-No one else has ever felt before!	[GIORGIO]
-
-You are so beautiful...
-
-Not by chance
-By necessity
-
-By the sadness that we saw in each other.
-[BOTH]
-Just another love story
-That's what they would claim
-Another simple love story
-Aren't all of them the same?
-
-[CLARA]
-No, but this is more
-We feel more!
-
-[BOTH]
-This is so much more!
-Like every other love story
-Some say happiness
-Comes and goes
-Then this happiness
-Is a kind of happiness
-No one really knows
-
-[GIORGIO]
-I thought I knew what love was
-
-[CLARA]
-I'd only heard what love was
-
-[GIORGIO]
-I thought it was no more than a name for yearning
-
-[CLARA]
-I thought it was what kindness became
-
-[GIORGIO]
-I'm learning
-
-[CLARA]
-I thought where there was love there was shame
-
-[GIORGIO]
-That with you
-
-[CLARA]
-But with you
-
-[BOTH]
-There's just happiness
-
-[CLARA]
-Endless happiness...
-
-(spoken)
-What?
-
-[GIORGIO, spoken]
-I've been transferred to the Fourth Brigade
-Oh, Clara, please don't look so sad
-
-[CLARA, spoken]
-You're the one that makes me happy
-
-[GIORGIO]
-God, you are so beautiful
-I love to see you in the light
-Clear and beautiful, memorize
-Every inch
-Every part of you
-To take with me
-
-[CLARA, spoken]
-Giorgio...
-
-[GIORGIO]
-Your feet so soft
-As if they'd never touched the ground
-
-[CLARA, spoken]
-I must go...
-
-[GIORGIO]
-Your skin so white, so pure, so delicate
-Your smell so sweet, your breathe so warm
-I will summon you in my mind
-I'm painting you indelibly on my mind
-
-[CLARA]
-Let me go
-
-[GIORGIO]
-We must fill every moment
-
-[CLARA]
-All this happiness ended by a word in the dark
-
-[GIORGIO]
-Oh my love, oh my darling
-
-[CLARA]
-So much happiness wasn't meant to last
-
-[GIORGIO]
-I am here
-I am with you
-I am yours
-
-[CLARA]
-I never knew what love was
-
-[GIORGIO]
-Your skin
-Your silken hair
-Your breasts, your lips
-I want you every minute of my life
-
-I will always be here	[CLARA]
-
-I always thought I didn't deserve it
-I didn't know what love was
-I don't know how I'll live when you're gone!
-[CLARA]
-I don't know how I'll live
-Giorgio!
-Don't leave me -->
-        </ul>
-    </p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lyrics Test Page</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <main>
+      <h1>Extraordinary Machine</h1>
+      <h2>Fiona Apple</h2>
+      <h3>
+        Lyrics by
+        <a href="https://en.wikipedia.org/wiki/Fiona_Apple">Fiona Apple</a>,
+        Production by
+        <a href="https://en.wikipedia.org/wiki/Jon_Brion">Jon Brion</a>
+      </h3>
+      <img
+        src="https://t2.genius.com/unsafe/516x516/https%3A%2F%2Fimages.genius.com%2F3cb8216bae22b8216969657d9b9380c2.1000x1000x1.png"
+        alt="Extraordinary Machine album art"
+      />
+      <section>
+        <h4>[Verse 1]</h4>
+        <p>
+          I certainly haven't been shopping for any new shoes<br />
+          And<br />
+          I certainly haven't been spreading myself around<br />
+          I still only travel by foot and by foot it's a slow climb<br />
+          But I'm good at being uncomfortable so<br />
+          I can't stop changing all the time
+        </p>
+        <h4>[Verse 2]</h4>
+        <p>
+          I noticed that my opponent is always on the go<br />
+          And<br />
+          Won't go slow, so 's not to focus, and I notice<br />
+          He'll hitch a ride with any guide, as long as<br />
+          They go fast from whence he came<br />
+          But he's no good at being uncomfortable, so<br />
+          He can't stop staying exactly the same
+        </p>
+        <h4>[Chorus]</h4>
+        <p>
+          <br />If there was a better way to go then it would find me<br />I
+          can't help it, the road just rolls out behind me<br />Be kind to me,
+          or treat me mean<br />I'll make the most of it, I'm an extraordinary
+          machine
+        </p>
+        <h4>[Verse 3]</h4>
+        <p>
+          <br />I seem to you to seek a new disaster every day<br />You deem me
+          due to clean my view and be at peace and lay<br />I mean to prove I
+          mean to move in my own way and say<br />I've been getting along for
+          long before you came into the play
+        </p>
+        <h4>[Verse 4]</h4>
+        <p>
+          <br />I am the baby of the family, it happens<br />So<br />Everybody
+          cares and wears the sheeps' clothes<br />While they chaperone<br />Curious,
+          you looking down your nose at me, while you appease<br />Courteous, to
+          try and help<br />But let me set your mind at ease
+        </p>
+        <h4>[Chorus]</h4>
+        <p>
+          <br />If there was a better way to go then it would find me<br />I
+          can't help it, the road just rolls out behind me<br />Be kind to me,
+          or treat me mean<br />I'll make the most of it, I'm an extraordinary
+          machine
+        </p>
+        <h4>[Bridge]</h4>
+        <p>
+          <br />Do I so worry you, you need to hurry to my side?<br />It's very
+          kind <br />But it's to no avail; and I don't want the bail<br />I
+          promise you, everything will be just fine
+        </p>
+        <h4>[Chorus]</h4>
+        <p>
+          <br />If there was a better way to go then it would find me<br />I
+          can't help it, the road just rolls out behind me<br />Be kind to me,
+          or treat me mean<br />I'll make the most of it, I'm an extraordinary
+          machine<br />If there was a better way to go then it would find me<br />I
+          can't help it, the road just rolls out behind me<br />Be kind to me,
+          or treat me mean<br />I'll make the most of it, I'm an extraordinary
+          machine
+        </p>
+      </section>
+    </main>
+  </body>
 </html>
